host_prod/api/calendar-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: calendar-application
  labels:
    app: calendar-backend
spec:
  selector:
    matchLabels:
      app: calendar-back
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: calendar-back
    spec:
      containers:
      - name: calendar-back
        image: kevinpsirius/expressjs_ci_deployment:v1
        securityContext:
          privileged: true
        volumeMounts:
          - mountPath: /var/www/html
            name: back-end-build
        command: ["/bin/sh", "-c"]
        args: ["npm i && pm2 start server.js && tail -f /dev/null"]
        ports:
        - name: http
          containerPort: 9002
      volumes:
        - name: back-end-build
          hostPath: 
            path:  /home/ubuntu/2itecheval2/calendar_backend/
            type: Directory
