host_prod/api/calendar-backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-back-service
  namespace: calendar-application
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - calendar.kpognon.eu
    secretName: ingress-secret-calendar
  rules:
  - host: calendar.kpognon.eu
    http:
      paths:
      - path: /api/(.+)
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 9002
